hphp/hack/test/typecheck/instantiate_from_unresolved_class_id_type.php.exp
ERROR: File "instantiate_from_unresolved_class_id_type.php", line 15, characters 21-26:
It is no longer allowed to use a `classname<this::TConstType>` in this position. Please use a `class<this::TConstType>` instead. (Typing[4482])
  File "instantiate_from_unresolved_class_id_type.php", line 20, characters 54-65:
  Definition is here
